# DQXTool

./: .gitignore  deploy.sh  dqxtool-api.service  index.html  package-lock.json  package.json  vite.config.ts
cpp_backend/: CMakeLists.txt  policy_value_net.onnx  setup_onnxruntime.sh
cpp_backend/src/: main.cpp  predictor.cpp  predictor.h  unit_tests.cpp
src/: App.tsx  index.css  server.ts
src/data/: damageTables.ts  hammers.csv  items.csv  levels.csv  masterData.ts  skills.csv  skills.ts
src/tests/: forgeCoreEngine.spec.ts  solver.spec.ts  testEngine.ts  verifyDetails.ts
src/utils/: featureExtractor.ts  forgeCoreEngine.ts  itemLoader.ts  mcts.ts  simulatorEngine.ts  solver.ts  solverUtils.ts
src/workers/: solverWorker.ts
